--- a/lesson18.html
+++ b/lesson18.html
@@ -10,5 +10,11 @@
     <h1>hello Githab</h1>
     регистрация на Гитхаб
     создать первый репезитор
+    git init //creat git 
+    git add . //добавлять Гит 
+    git commit ""//сделать коммит
+    git branch -M main//изменить названию ветку
+    git remote add origin 
+    git push origin main//пушить в Гитхаб
 </body>
 </html>
