--- a/lesson18.html
+++ b/lesson18.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello Githab</title>
+    <style>
+        .stil{
+            width: 200px;
+            height: 400px;
+            background-color: black;
+            color: white;
+            font-size: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <h1>hello Githab</h1>
@@ -16,5 +28,6 @@
     git branch -M main//изменить названию ветку
     git remote add origin 
     git push origin main//пушить в Гитхаб
+    <div class="stil"> Салам</div>
 </body>
 </html>
